before uploading to hub

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,46 +31,46 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">EdgeTest</td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi">0</td><td class="numi">60.6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
-<tr class="stripe"><td style="text-align:left;padding-right:2em">ChromeTest</td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi">0</td><td class="numi">64.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
-<tr><td style="text-align:left;padding-right:2em">FirefoxTest</td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi">0</td><td class="numi">67.7 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">EdgeTest</td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi">0</td><td class="numi">63.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr class="stripe"><td style="text-align:left;padding-right:2em">FirefoxTest</td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi">0</td><td class="numi">66.9 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">ChromeTest</td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi">0</td><td class="numi">76.7 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 <tr class="total"><td>Total</td>
-<td class="numi">12</td><td class="numi">12</td><td class="numi">0</td><td class="numi">0</td><td class="numi">67.7 seconds</td><td colspan="2">&nbsp;</td></tr>
+<td class="numi">12</td><td class="numi">12</td><td class="numi">0</td><td class="numi">0</td><td class="numi">76.7 seconds</td><td colspan="2">&nbsp;</td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">EdgeTest &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="4">com.ddfw.punj.testcases.TestCaseA</td><td><a href="#m1"><b>test1</b>  </a></td><td class="numi">1</td><td>1536836968911</td><td class="numi">12547</td></tr><tr class="passedodd"><td><a href="#m2"><b>test2</b>  </a></td><td class="numi">1</td><td>1536836981460</td><td class="numi">15981</td></tr><tr class="passedodd"><td><a href="#m3"><b>test3</b>  </a></td><td class="numi">1</td><td>1536836997449</td><td class="numi">12251</td></tr><tr class="passedodd"><td><a href="#m4"><b>test4</b>  </a></td><td class="numi">1</td><td>1536837009701</td><td class="numi">8323</td></tr>
-<tr><th colspan="4">ChromeTest &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="4">com.ddfw.punj.testcases.TestCaseA</td><td><a href="#m5"><b>test1</b>  </a></td><td class="numi">1</td><td>1536836969556</td><td class="numi">19799</td></tr><tr class="passedodd"><td><a href="#m6"><b>test2</b>  </a></td><td class="numi">1</td><td>1536836989357</td><td class="numi">15687</td></tr><tr class="passedodd"><td><a href="#m7"><b>test3</b>  </a></td><td class="numi">1</td><td>1536837005048</td><td class="numi">16085</td></tr><tr class="passedodd"><td><a href="#m8"><b>test4</b>  </a></td><td class="numi">1</td><td>1536837021134</td><td class="numi">7120</td></tr>
+<tr class="passedodd"><td rowspan="4">com.ddfw.punj.testcases.TestCaseA</td><td><a href="#m1"><b>test1</b>  </a></td><td class="numi">1</td><td>1536918282224</td><td class="numi">9880</td></tr><tr class="passedodd"><td><a href="#m2"><b>test2</b>  </a></td><td class="numi">1</td><td>1536918292105</td><td class="numi">13678</td></tr><tr class="passedodd"><td><a href="#m3"><b>test3</b>  </a></td><td class="numi">1</td><td>1536918305805</td><td class="numi">9798</td></tr><tr class="passedodd"><td><a href="#m4"><b>test4</b>  </a></td><td class="numi">1</td><td>1536918315605</td><td class="numi">5938</td></tr>
 <tr><th colspan="4">FirefoxTest &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="4">com.ddfw.punj.testcases.TestCaseA</td><td><a href="#m9"><b>test1</b>  </a></td><td class="numi">1</td><td>1536836978704</td><td class="numi">15797</td></tr><tr class="passedodd"><td><a href="#m10"><b>test2</b>  </a></td><td class="numi">1</td><td>1536836994502</td><td class="numi">15860</td></tr><tr class="passedodd"><td><a href="#m11"><b>test3</b>  </a></td><td class="numi">1</td><td>1536837010365</td><td class="numi">12593</td></tr><tr class="passedodd"><td><a href="#m12"><b>test4</b>  </a></td><td class="numi">1</td><td>1536837022959</td><td class="numi">6487</td></tr>
+<tr class="passedodd"><td rowspan="4">com.ddfw.punj.testcases.TestCaseA</td><td><a href="#m5"><b>test1</b>  </a></td><td class="numi">1</td><td>1536918288192</td><td class="numi">10568</td></tr><tr class="passedodd"><td><a href="#m6"><b>test2</b>  </a></td><td class="numi">1</td><td>1536918298761</td><td class="numi">14087</td></tr><tr class="passedodd"><td><a href="#m7"><b>test3</b>  </a></td><td class="numi">1</td><td>1536918312851</td><td class="numi">10138</td></tr><tr class="passedodd"><td><a href="#m8"><b>test4</b>  </a></td><td class="numi">1</td><td>1536918322990</td><td class="numi">5625</td></tr>
+<tr><th colspan="4">ChromeTest &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="4">com.ddfw.punj.testcases.TestCaseA</td><td><a href="#m9"><b>test1</b>  </a></td><td class="numi">1</td><td>1536918285789</td><td class="numi">13924</td></tr><tr class="passedodd"><td><a href="#m10"><b>test2</b>  </a></td><td class="numi">1</td><td>1536918299718</td><td class="numi">16706</td></tr><tr class="passedodd"><td><a href="#m11"><b>test3</b>  </a></td><td class="numi">1</td><td>1536918316425</td><td class="numi">12917</td></tr><tr class="passedodd"><td><a href="#m12"><b>test4</b>  </a></td><td class="numi">1</td><td>1536918329344</td><td class="numi">8473</td></tr>
 </table>
 <h1>EdgeTest</h1>
-<h2 id="m1">com.ddfw.punj.testcases.TestCaseA:test1</h2>
+<h2 id="m1">com.ddfw.punj.testcases.TestCaseA:test2</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.ddfw.punj.testcases.TestCaseA:test2</h2>
+<h2 id="m2">com.ddfw.punj.testcases.TestCaseA:test3</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">com.ddfw.punj.testcases.TestCaseA:test4</h2>
+<h2 id="m3">com.ddfw.punj.testcases.TestCaseA:test1</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">com.ddfw.punj.testcases.TestCaseA:test3</h2>
+<h2 id="m4">com.ddfw.punj.testcases.TestCaseA:test4</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h1>ChromeTest</h1>
-<h2 id="m5">com.ddfw.punj.testcases.TestCaseA:test3</h2>
+<h1>FirefoxTest</h1>
+<h2 id="m5">com.ddfw.punj.testcases.TestCaseA:test2</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">com.ddfw.punj.testcases.TestCaseA:test2</h2>
+<h2 id="m6">com.ddfw.punj.testcases.TestCaseA:test4</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m7">com.ddfw.punj.testcases.TestCaseA:test1</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m8">com.ddfw.punj.testcases.TestCaseA:test4</h2>
+<h2 id="m8">com.ddfw.punj.testcases.TestCaseA:test3</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h1>FirefoxTest</h1>
-<h2 id="m9">com.ddfw.punj.testcases.TestCaseA:test2</h2>
+<h1>ChromeTest</h1>
+<h2 id="m9">com.ddfw.punj.testcases.TestCaseA:test4</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m10">com.ddfw.punj.testcases.TestCaseA:test4</h2>
+<h2 id="m10">com.ddfw.punj.testcases.TestCaseA:test3</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m11">com.ddfw.punj.testcases.TestCaseA:test1</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m12">com.ddfw.punj.testcases.TestCaseA:test3</h2>
+<h2 id="m12">com.ddfw.punj.testcases.TestCaseA:test2</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
