--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-My_Sample_Suite">
-                    <span>C:\Users\Dell\Workspace\ParallelCI\ddfw.punj\src\test\resources\testngbck.xml</span>
+                    <span>C:\Users\Dell\Workspace\BrowserStack\BrowserStack\src\test\resources\testngbck.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -266,7 +266,7 @@
         </div> <!-- panel My_Sample_Suite -->
         <div panel-name="test-xml-My_Sample_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dell\Workspace\ParallelCI\ddfw.punj\src\test\resources\testngbck.xml</span>
+            <span class="header-content">C:\Users\Dell\Workspace\BrowserStack\BrowserStack\src\test\resources\testngbck.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -336,53 +336,53 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(12);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test1')
+data.setCell(0, 1, 'test2')
 data.setCell(0, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(0, 3, 19799);
+data.setCell(0, 3, 16706);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test3')
+data.setCell(1, 1, 'test2')
 data.setCell(1, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(1, 3, 16085);
+data.setCell(1, 3, 14087);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'test2')
+data.setCell(2, 1, 'test1')
 data.setCell(2, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(2, 3, 15981);
+data.setCell(2, 3, 13924);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'test2')
 data.setCell(3, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(3, 3, 15860);
+data.setCell(3, 3, 13678);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'test1')
+data.setCell(4, 1, 'test3')
 data.setCell(4, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(4, 3, 15797);
+data.setCell(4, 3, 12917);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'test2')
+data.setCell(5, 1, 'test1')
 data.setCell(5, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(5, 3, 15687);
+data.setCell(5, 3, 10568);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'test3')
 data.setCell(6, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(6, 3, 12593);
+data.setCell(6, 3, 10138);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'test1')
 data.setCell(7, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(7, 3, 12547);
+data.setCell(7, 3, 9880);
 data.setCell(8, 0, 8)
 data.setCell(8, 1, 'test3')
 data.setCell(8, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(8, 3, 12251);
+data.setCell(8, 3, 9798);
 data.setCell(9, 0, 9)
 data.setCell(9, 1, 'test4')
 data.setCell(9, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(9, 3, 8323);
+data.setCell(9, 3, 8473);
 data.setCell(10, 0, 10)
 data.setCell(10, 1, 'test4')
 data.setCell(10, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(10, 3, 7120);
+data.setCell(10, 3, 5938);
 data.setCell(11, 0, 11)
 data.setCell(11, 1, 'test4')
 data.setCell(11, 2, 'com.ddfw.punj.testcases.TestCaseA')
-data.setCell(11, 3, 6487);
+data.setCell(11, 3, 5625);
 window.suiteTableData['My_Sample_Suite']= { tableData: data, tableDiv: 'times-div-My_Sample_Suite'}
 return data;
 }
@@ -428,67 +428,67 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">4460 ms</span>
+                <span class="method-start">10005 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">5105 ms</span>
+                <span class="method-start">13570 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">14253 ms</span>
+                <span class="method-start">15973 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test2</span>
-                <span class="method-start">17009 ms</span>
+                <span class="method-start">19886 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test2</span>
-                <span class="method-start">24906 ms</span>
+                <span class="method-start">26542 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test2</span>
-                <span class="method-start">30051 ms</span>
+                <span class="method-start">27499 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test3</span>
-                <span class="method-start">32998 ms</span>
+                <span class="method-start">33586 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test3</span>
-                <span class="method-start">40597 ms</span>
+                <span class="method-start">40632 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test4</span>
-                <span class="method-start">45250 ms</span>
+                <span class="method-start">43386 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test3</span>
-                <span class="method-start">45914 ms</span>
+                <span class="method-start">44206 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">terminate</span>
-                <span class="method-start">53576 ms</span>
+                <span class="method-start">49327 ms</span>
               </div> <!-- configuration-test after -->
               <div class="test-method">
                 <span class="method-name">test4</span>
-                <span class="method-start">56683 ms</span>
+                <span class="method-start">50771 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">terminate</span>
+                <span class="method-start">56397 ms</span>
+              </div> <!-- configuration-test after -->
               <div class="test-method">
                 <span class="method-name">test4</span>
-                <span class="method-start">58508 ms</span>
+                <span class="method-start">57125 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">terminate</span>
-                <span class="method-start">63804 ms</span>
-              </div> <!-- configuration-test after -->
-              <div class="configuration-test after">
-                <span class="method-name">terminate</span>
-                <span class="method-start">64996 ms</span>
+                <span class="method-start">65599 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">extentquit</span>
-                <span class="method-start">67705 ms</span>
+                <span class="method-start">76670 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
