--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 19:55:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestCaseC.launch()[pri:0, instance:com.ddfw.punj.testcases.TestCaseC@4e7dc304]">&gt;&gt;launch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 19:55:52</td>   <td>2896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseC.test1()[pri:0, instance:com.ddfw.punj.testcases.TestCaseC@4e7dc304]">test1</td> 
-  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 19:56:03</td>   <td>14322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseC.test2()[pri:0, instance:com.ddfw.punj.testcases.TestCaseC@4e7dc304]">test2</td> 
-  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 19:56:15</td>   <td>25559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseC.test3()[pri:0, instance:com.ddfw.punj.testcases.TestCaseC@4e7dc304]">test3</td> 
-  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 19:56:26</td>   <td>36345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseC.test4()[pri:0, instance:com.ddfw.punj.testcases.TestCaseC@4e7dc304]">test4</td> 
-  <td>main@561247961</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 19:56:31</td>   <td>42263</td> <td title="&lt;&lt;TestCaseC.extentquit()[pri:0, instance:com.ddfw.punj.testcases.TestCaseC@4e7dc304]">&lt;&lt;extentquit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561247961</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>18/09/14 19:17:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseA.test1()[pri:0, instance:com.ddfw.punj.testcases.TestCaseA@1786dec2]">test1</td> 
+  <td>main@852687460</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>18/09/14 19:17:23</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseA.test2()[pri:0, instance:com.ddfw.punj.testcases.TestCaseA@1786dec2]">test2</td> 
+  <td>main@852687460</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>18/09/14 19:17:23</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseA.test3()[pri:0, instance:com.ddfw.punj.testcases.TestCaseA@1786dec2]">test3</td> 
+  <td>main@852687460</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>18/09/14 19:17:23</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCaseA.test4()[pri:0, instance:com.ddfw.punj.testcases.TestCaseA@1786dec2]">test4</td> 
+  <td>main@852687460</td>   <td></td> </tr>
 </table>
